# gravitySim

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md.orig  cmake_install.cmake  compile_commands.json  main.cpp  my_program  program
.cache/clangd/index/: fileIo.hpp.8F5CE1E3292701C8.idx  glad.c.C098A4B0A12FE013.idx  glad.c.CDC377DD85216CE2.idx  glad.h.106BDD1DDCE1375A.idx  glad.h.753DCDA3A54D0EF3.idx  khrplatform.h.17FBCF0D9904E4C2.idx  khrplatform.h.AD6FC51055004FC0.idx  main.cpp.670962D9B43D74A8.idx
glad/include/glad/: glad.h
glad/src/: glad.c
helper/: fileIo.hpp
shaderSrc/: main.frag  main.vert
